<?xml version="1.0"?>
<package format="2">
  <name>gmplot</name>
  <version>1.0.1</version>
  <description>
    ROS wrapping of gmplot library
  </description>
  <maintainer email="mradov@gmail.com">Micho Radovnikovich</maintainer>
  <url type="website">http://wiki.ros.org/gmplot</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>

  <export>
  </export>
</package>
